--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,4 +22,7 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="share_placeholder">Share</string>
     <string name="date_placeholder">1.01.2022</string>
+    <string name="no_internet_connection">Отсутствует подключение к интернету</string>
+    <string name="no_internet_connection_2">Это приложение не может работать корректно при отсутствии интернета. \nВключите интернет и нажмите "Ок."</string>
+    <string name="ok">Ок</string>
 </resources>
